[package]
name = "xenstore-win"
version = "0.0.1-dev"
authors = ["Yann Dirson <yann.dirson@vates.fr>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
serde = "1.0.193"
windows = { version = "0.48.0", features = ["Win32_System_Wmi"] }
wmi = { version = "0.13.1" }

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
