[package]
name = "xenstore-win"
version = "0.0.1-dev"
authors = ["Yann Dirson <yann.dirson@vates.fr>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies.windows]
#version = "0.52.0"
git = "https://github.com/microsoft/windows-rs/"
features = [
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Wmi",
]

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
